- Moved title to right on mobile as I can't figure out the bug on android chrome where if the toolbar is scrollable in the x direction, the dropdown's do not position correctly.

--- a/src/components/Toolbar/style.scss
+++ b/src/components/Toolbar/style.scss
@@ -21,17 +21,25 @@
     font-size: 1.2em;
     font-weight: 600;
     white-space: nowrap;
+    margin-right: 1em;
+    order: 1;
 
     &>a, &>a:hover {
       border-bottom: none;
     }
+
+    @include breakpoint(phablet) {
+      display: inline;
+      order: 0;
+    }
   }
 
   &-items {
-    margin-left: 1em;
-  }
-
-  &-items>* {
-    margin: 0 0.5em;
+    &>* {
+      margin: 0 0.5em;
+      &:first-child {
+        margin-left: 0;
+      }
+    }
   }
 }
